Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18832

lctl set_param --help segfault

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      setparam_cmdline, getparam_cmdline and listparam_cmdline don't add a NULL element at the end of the longopt list which cases getopt_long to trigger a segfault when parsing an option that it doesn't know such as --help.

      Attachments

        Activity

          People

            giardi Sylwyn Giardi
            courrier Guillaume Courrier
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: