LU-18832 utils: lctl set_param --help segfault

Correct a bug when calling lctl. In some cases, using unkown option
made lctl to segfault. Corrected by adding NULL element at the end
of the longpost list to help parsing.

Test-Parameters: trivial
Fixes: e7b8986619 ("LU-17416 utils: option for lctl get_param to skip links")
Signed-off-by: Giardi Sylwyn <sylwyn.giardi@cea.fr>
Change-Id: I50cf97cf132e899a4f5c4a8f079638ecfe9ca6a4
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58510
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Etienne AUJAMES <eaujames@ddn.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>